project finished for now

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 html{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: grey;
 }
+
+body{
+    margin: 0px;
+}
+
 a{
     text-decoration: none;
 }
@@ -58,7 +62,6 @@ div > a{
     ;
     grid-area: hd;
     background-color: white;
-    border: 2px solid black;
     border-bottom: 0;
 }
 
@@ -75,6 +78,7 @@ div > a{
     justify-content: space-between;
     grid-area: lc;
     margin: 10px;
+    margin-bottom: 14px;
 }
 
 #buttons{
@@ -100,7 +104,7 @@ div > a{
     width: 400px;
     height: 1.2rem;
     margin: 0 10px;
-    border: 1px solid black;
+    border: 1px solid rgb(211, 211, 211);
     border-radius: 15px;
     background-color: rgb(211, 211, 211);
 }
@@ -113,13 +117,15 @@ div > a{
     
 }
 
-#notifications-profile > img{
+#notifications-profile > a> img{
     height: 30px;
     width: 30px;
+    margin: 0 4px;
 }
 
 #notifications-profile > p{
     margin: 4px 8px;
+    font-weight: bold;
 }
 
 #greeting{
@@ -137,7 +143,6 @@ div > a{
     overflow: scroll;
     grid-area: ct;
     background-color: rgb(211, 211, 211);
-    border: 2px solid black;
 }
 
 .projects{
@@ -154,21 +159,28 @@ div > a{
     flex-direction: column;
     margin: 10px;
     border: 1px solid grey;
+    border-left: 8px solid black;
     border-radius: 15px;
-    background-color: rgb(158, 158, 158);
+    background-color: white;
 }
 
-/*
-.projects-sub > p{
+.projects-links{
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 100%;
+    justify-content: flex-end;
 }
-*/
+
+.projects-links > a > img{
+    height: 20px;
+    width: 20px;
+    margin: 8px;
+    margin-bottom:2px;
+    align-items: flex-end;
+}
+
 #announcements{
     margin: 4px;
-    border: 2px solid black;
+    border: 1px solid grey;
+    border-radius: 15px;
     background-color: white;
     grid-area: ns;
 }
@@ -186,28 +198,26 @@ div > a{
     display: flex;
     flex-direction: column;
     grid-area: ns;
-    background-color: azure;
-    border: 2px solid black;
+    background-color: rgb(211, 211, 211);
     border-left: 0;
+    padding: 8px;
+    padding-top: 0px;
 }
 
 #news-sub{
     height: 100%;
     display: flex;
     flex-direction: column;
-    /* display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    gap: 15px; */
 }
 
 #trending{
-    height: 15%;
     display: grid;
-    grid-template: repeat(4, 1fr) / repeat(1, 1fr);
+    justify-content: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
     border: 1px solid grey;
     border-radius: 15px;
-    background-color: grey;
+    background-color: white;
 }
 
 #trending > div{
@@ -219,11 +229,14 @@ div > a{
     height: 30px;
 }
 
+#trending >div > p{
+    font-size: 12px;
+}
+
 .sidebar{
     width: 150px;
     grid-area: sb;
     background-color: rgb(3, 102, 252);
-    border: 2px solid black;
     border-right: 0;
 }
 
@@ -233,6 +246,13 @@ div > a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+#fixed-container > div > a {
+    font-weight: bold;
+}
+#fixed-container > div > div > a {
+    font-weight: bold;
 }
 
 #logo{
